# extraclasses-api

./: .gitignore  README.md  database.db  pyproject.toml
alembic/: env.py
app/: dependencies.py  main.py
app/database/: database.py
app/database/crud/: __init__.py  base.py
app/database/schemas/: message_schema.py  tutor_schema.py  user_schema.py
app/models/: base.py  message_model.py  tutor_model.py  user_model.py
app/routers/: generic_routers.py  message_router.py  rest_routers.py  tutor_router.py  user_router.py
app/services/: crud_service_base.py  message_service.py  tutor_service.py  user_service.py
app/utils/enums/: enums.py
app/utils/messages/: error_message_constants.py  success_message_constants.py
