[tool.poetry]
name = "extraclasses-api"
version = "0.1.0"
description = ""
authors = ["Derrick Gyimah"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
sqlalchemy = "<=2.0.21"
sqlalchemy-continuum = "^1.4.1"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
